          the terminfo flash code to use the same delay.  This is
          synchronous, so many bells might inhibit screen updates in other
          windows.
        - text with background==foreground colour gets displayed with default
          bg/fg now when in reverse video, so it can be seen when selecting.
        - allow koi8r* as x11 encoding name for koi8r (Nikita Danilov).
        
5.7  Wed Jul 13 04:46:33 CEST 2005
	- implement some useful (hopefully) options for rxvtd.
        - separate and improved rxvtc(1) and rxvtd(1) manpages.
        - fix a bug that caused segfaults on startup on systems that do
          not support local unix connections, e.g cygwin. (btw, I didn't
          even know about the -rootless and -multiwindow Cygwin/X modes).
        - large amounts of text without control sequences or newlines
          could almost freeze output. This has been fixed by adding extra
          refreshes in these cases (also a problem in oriignal rxvt).

5.6  Sun Jun 26 22:11:13 CEST 2005
        - R_SB_RXVT bitset value was 0, so rxvt scrollbar was initialised
          every time resulting in display errors (original rxvt also affected).
          Reported by Jasmin Buchert.
        - font names are now considered to be utf-8 encoded (xft apperently
          uses this convention. X Core fonts might not, but it should be rare).
          Affects display in iso14755 box.
        - rewrote the low-level xft drawing function ("xft backend" for the
          hipper parts of the world) to hopefully cope better with proportional
          chars mixed with fixed-width ones.
        - rxvt is now much more careful (read: slower) with potentially
          overlapping xft characters. It usually overshoots and redraws
          more than required, but that's better than undershooting and
          cutting pieces off of characters.
        - rxvt is now more restrictive in what font heights it accepts for