@@ -34,6 +34,7 @@ WISH: just for fun, do shade and tint with XRender.
         - text with background==foreground colour gets displayed with default
           bg/fg now when in reverse video, so it can be seen when selecting.
         - allow koi8r* as x11 encoding name for koi8r (Nikita Danilov).
+        - removed undocumented inheritPixmapforce option.
         
 5.7  Wed Jul 13 04:46:33 CEST 2005
 	- implement some useful (hopefully) options for rxvtd.
